<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SettingsMbox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="oobe_welcome">Welcome</string>
    <string name="oobe_language">Language</string>
    <string name="oobe_net">Network</string>
    <string name="oobe_screenadjust">Screen</string>
    <string name="button_skip">Skip</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="language_tip">Please select your system language !</string>
    <string name="position_help">Help: \n1.Press &quot;Enter Key&quot; to switch zoom in/zoom out; \n2.Press &quot;Direction Keys&quot; to change display position; \n3.Press &quot;Back Key&quot; to save and exit; \n4.Adjusted results will take effect after reboot; \n5.Press &quot;Menu Key&quot; to set default display position.</string>
    <string name="position_help_noreboot">Help: \n1.Press &quot;Up/Down Key&quot; to zoom in/zoom out untill one side black; \n2.Press &quot;Back Key&quot; to save; \n</string>
    <string name="txt_hint">Zoom In/Out</string>
    <string name="settings_top_network">Network </string>
    <string name="settings_top_display">Display </string>
    <string name="settings_top_expert">Advanced </string>

    <string name="wifi">Wifi</string>
    <string name="ethernet">Ethernet</string>
    <string name="no_network">Please select WiFi or Ethernet to connect !</string>
    <string name="no_network_wifi_only"> No network connectted right now !</string>
    <string name="wifi_closed"> Wifi Closed</string>
    <string name="eth_connectd"> Ethernet Connected</string>
    <string name="ip_address"> IP Address:</string>
    <string name="gateway"> Gateway</string>
    <string name="subnet_mask"> Subnet Mask</string>
    <string name="mac_address"> MAC address:</string>
    <string name="wifi_connectting"> Wifi Connectting ... </string>
    <string name="wifi_input_password"> Input Password </string>
    <string name="wifi_connect"> Connect Now </string>
    <string name="wifi_ap_select"> Select your AP </string>
    <string name="wifi_connected"> Wifi connected </string>
    <string name="wifi_name"> AP Name: </string>
    <string name="wifi_level"> Wifi Strength </string>
    <string name="welcome">Welcome </string>
    <string name="welcome_tips">Thank you for use our devices </string>
    <string name="screen_setting_auto">Auto output mode</string>
    <string name="screen_setting_output">Output mode setting</string>
    <string name="hide_staus_bar">Hide Status Bar </string>
    <string name="screen_adjust">Display Position</string>
    <string name="close">close</string>
    <string name="screen_keep">Keep Screen </string>
    <string name="settings_self">self select </string>
    <string name="settings_self_2">self select: </string>
    <string name="close_2">close</string>
    <string name="time_4"> 4min</string>
    <string name="select_default">default</string>
    <string name="time_8"> 8min </string>
    <string name="time_12">12min </string>
    <string name="password">Password</string>
    <string name="refresh_now">Refresh Access Point List ...</string>
    <string name="system_setting">Settings</string>
    <string name="settings_other">Others</string>
    <string name="display_auto">Auto Output Mode</string>
    <string name="display_auto_value">auto setting by system </string>
    <string name="display_self_setting">HDMI Output Mode Setting :</string>
    <string name="display_self_setting_value">self select:(HDMI 1080I 50HZ)</string>
    <string name="expert_wifi_direct">Miracast</string>
    <string name="expert_dlna">DLNA</string>
    <string name="expert_remote_control">Remote Control</string>
    <string name="city_select">Location</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="change_screen_request">Application request to change orientation</string>
    <string name="keep_screen_land">Keep landscape in home screen</string>
    <string name="voice_setting">Voice</string>
    <string name="device_num"> Devices: XXX</string>
    <string name="device_version">Version: XXX</string>
    <string name="device_mac_address">MAC：XXX </string>
    <string name="system_update">System Update</string>
    <string name="more_settings">More Settings</string>
    <string name="factory">Factory: XXX</string>
    <string name="address">address: XXX</string>
    <string name="web_address"> Web: www.XXX</string>
    <string name="self_set">Self Setting</string>
    <string name="screen_tips_01"> If  not full screen </string>
    <string name="screen_tips_02"> Press the key "up" or "down", until the white frame  cover the edge </string>
    <string name="screen_close">Close</string>
    <string name="screen_tips_03"> Click key "back" to save and back</string>
    <string name="oobe_finish">Finish</string>
    <string name="output_popup_window_title">Output Modes</string>
    <string name="system_settings_title">SETTINGS</string>
    <string name="network_settings">Network</string>
    <string name="display_settings">Display</string>
    <string name="expert_settings">Advanced</string>
    <string name="other_settings">Other</string>
    <string name="voices_settings_title">Digital Audio Output</string>
    <string name="voices_settings_pcm">PCM</string>
    <string name="voices_settings_spdif">SPDIF passthrough</string>
    <string name="voices_settings_hdmi">HDMI passthrough</string>
    <string name="select_wifi_tips"> Please select an accesspoint to connect ... </string>
    <string name="connectting_wifi_tips">connectting ...</string>
    <string name="cec_control">CEC Control</string>
    <string name="citys">City List</string>
    <string name="provinces">Province List</string>
    <string name="cec_switch">CEC Switch</string>
    <string name="cec_play">One key Play </string>
    <string name="cec_power_off">One key power off</string>
    <string name="cec_language">auto change language </string>
    <string name="welcome_tips_01">Welcome to use out device.  </string>
    <string name="welcome_tips_02">Select \"next\" to set your device right now.</string>
    <string name="temperature_start">温度：</string>
    <string name="temperature_end">：</string>
    <string name="ethernet_connectting">Ethernet Connectting ...</string>
    <string name="model_number">Model number :</string>
    <string name="firmware_version">Android version :</string>
    <string name="kernel_version">Kernel version :</string>
    <string name="build_number">Build number : </string>
    <string name="miracast_server_name">DeviceName: </string>
    <string name="cvbs_setting">CVBS Mode Setting : </string>
    <string name="cvbs_480">CVBS 480 </string>

	<string name="language_cn">简体中文</string>
	<string name="language_english">english</string>
	<string name="language_tw">繁體中文</string>
	<string name="ethernet_inplug_notice">Please plug in ethernet first !</string>
	<string name="passwork_input_notice">Please input password first!</string>
	<string name="ethernet_error">Ethernet connect error !</string>
</resources>
