<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oobe_welcome"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="60dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_tips_01"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_tips_02"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top|center_horizontal" >

        <Button
            android:id="@+id/button_welcome_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_skip"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:textSize="22dp" />

        <Button
            android:id="@+id/button_welcome_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_next"
            android:textColor="@android:color/white"
            android:textSize="22dp" />
    </LinearLayout>

</LinearLayout>