<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_tip"
            android:textColor="@android:color/white"
            android:textSize="25dp" />


        <LinearLayout 
			android:layout_width="fill_parent"
        	android:layout_height="144dp"
        	android:layout_marginTop="15dp"
			android:gravity="center_horizontal"> 
	        <FrameLayout
	            android:layout_width="144dp"
	            android:layout_height="144dp" >

	            <TextView
	                android:id="@+id/language_cn"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_gravity="center"
	                android:drawableTop="@drawable/china"
	                android:gravity="center_horizontal"
	                android:paddingTop="30dp"
	                android:text="@string/language_cn"
	                android:textColor="@android:color/white"
	                android:textSize="22dp" />

	            <ImageView
	            	android:id="@+id/select_cn"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                
	                android:clickable="true"
	                android:focusable="true" />
        	</FrameLayout>
	        <FrameLayout
	            android:layout_width="144dp"
	            android:layout_height="144dp" 
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
	            >

	            <TextView
	                android:id="@+id/language_english"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_gravity="center"
	                android:drawableTop="@drawable/english"
	                android:gravity="center_horizontal"
	                android:paddingTop="30dp"
	                android:text="@string/language_english"
	                android:textColor="@android:color/white"
	                android:textSize="22dp" />

	            <ImageView
	            	android:id="@+id/select_english"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                
	                android:clickable="true"
	                android:focusable="true" />
        	</FrameLayout>
	        <FrameLayout
	            android:layout_width="144dp"
	            android:layout_height="144dp" >

	            <TextView
	                android:id="@+id/language_tw"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_gravity="center"
	                android:drawableTop="@drawable/hk"
	                android:gravity="center_horizontal"
	                android:paddingTop="30dp"
	                android:text="@string/language_tw"
	                android:textColor="@android:color/white"
	                android:textSize="22dp" />

	            <ImageView
	            	android:id="@+id/select_tw"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                
	                android:clickable="true"
	                android:focusable="true" />
        	</FrameLayout>
             
        </LinearLayout>

  
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top|center_horizontal" >

        <Button
            android:id="@+id/button_language_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_previous"
            android:textColor="@android:color/white"
            android:textSize="22dp" />

        <Button
            android:id="@+id/button_language_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_next"
            android:textColor="@android:color/white"
            android:textSize="22dp" />
    </LinearLayout>

</LinearLayout>