<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/settingsContentLayout_04"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="270dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/model_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/model_number"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/model_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/firmware_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/firmware_version"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/firmware_version_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/build_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/build_number"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/build_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/system_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/select_others"
                    android:nextFocusLeft="@id/system_update"
                    android:nextFocusRight="@id/system_update"
                    android:text="@string/system_update"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/more_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/select_others"
                    android:nextFocusLeft="@id/more_settings"
                    android:nextFocusRight="@id/more_settings"
                    android:text="@string/more_settings"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="180dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/kernel_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/kernel_version"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kernel_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/web_address"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>